  incorrect information in the file-format (Fridrich)
- Fix incorrect reading of font name information in prefix packets (Fridrich)
- Fixing http://bugzilla.abisource.com bug #10957: Bad -L flags in Makefile.am break
  compiling if different libwpd version is already installed (Daniel Mack)
- Fixing http://bugzilla.abisource.com bug #10958: Risky -I ordering (Daniel Mack)

0.8.9 - 0.8.10
- Fix a locale dependency in our float to string conversion (Fridrich)
- Enhance our reading of document meta data for WP6 (David Hislop)
- Fix some sillies and be gracious with documents with corrupted prefix packets (Fridrich)
- Prevent the heuristic typedetection from throwing (Fridrich)
- Add a new stream implementation based on C++ streams, rendering libgsf dependency
  very optional; deprecate GSFInputStream (Fridrich)
- Allow building of wpd2foo tools by Micro$oft Visual studio (David Hislop, Fridrich)

0.8.8 - 0.8.9
- Fix http://qa.openoffice.org/issues/show_bug.cgi?id=74134, a bug in WP1 document
  type detection where we could try to seek to a negative place in document (Fridrich)
- Fix a regression wrt. 0.8.7 preventing the conversion of tab table in
  WP1 and WP3 file-format (Fridrich)
- Fixed several overflow bugs reported by iDefense. An attacker could create a
  carefully crafted Word Perfect file that could cause an application linked with
  libwpd, such as OpenOffice, to crash or possibly execute arbitrary code if the
  file was opened by a victim. (CVE-2007-0002) (iDefense's Sean Larsson, Fridrich)

0.8.7 - 0.8.8
- Add unit tests for the stream class (Fridrich & Andrew Ziem)
- Ignore foot/endnotes that are referenced inside other foot/endnotes (Fridrich);
  fixes http://www.openoffice.org/issues/show_bug.cgi?id=71487
- Handle graciously unsupported password-protected documents; (Fridrich)
  fixes http://www.openoffice.org/issues/show_bug.cgi?id=72307
- Remove warnings on main OpenOffice.org platforms (Fridrich)