@@ -154,6 +154,7 @@ AC_ARG_ENABLE(debug,[  --enable-debug    Turn on debugging],[
 # What flag to depends on gcc version: gcc3 uses "-mms-bitfields", while
 # gcc2 uses "-fnative-struct".
 if test x"$native_win32" = xyes; then
+  AC_CHECK_TOOL(WINDRES, windres)
   if test x"$GCC" = xyes; then
     msnative_struct=''
     AC_MSG_CHECKING([how to get MSVC-compatible struct packing])
