@@ -9,7 +9,7 @@ bin_PROGRAMS = $(target_wpd2raw)
 AM_CXXFLAGS = -I$(top_srcdir)/src/lib $(LIBWPD_CXXFLAGS) $(DEBUG_CXXFLAGS)
 
 wpd2raw_DEPENDENCIES = @WPD2RAW_WIN32_RESOURCE@
-wpd2raw_LDADD = ../../lib/libwpd-@WPD_MAJOR_VERSION@.@WPD_MINOR_VERSION@.la ../../lib/libwpd-stream-@WPD_MAJOR_VERSION@.@WPD_MINOR_VERSION@.la $(LIBWPD_LIBS) @WPD2RAW_WIN32_RESOURCE@
+wpd2raw_LDADD = ../../lib/libwpd-0.8.la ../../lib/libwpd-stream-0.8.la $(LIBWPD_LIBS) @WPD2RAW_WIN32_RESOURCE@
 
 wpd2raw_SOURCES = \
 	RawListener.cpp	 \
@@ -19,7 +19,8 @@ wpd2raw_SOURCES = \
 if OS_WIN32
 
 @WPD2RAW_WIN32_RESOURCE@ : wpd2raw.rc
-	$(top_srcdir)/build/win32/lt-compile-resource wpd2raw.rc @WPD2RAW_WIN32_RESOURCE@
+	chmod +x $(top_srcdir)/build/win32/*compile-resource
+	WINDRES=@WINDRES@ $(top_srcdir)/build/win32/lt-compile-resource wpd2raw.rc @WPD2RAW_WIN32_RESOURCE@
 endif
 
 # Include the wpd2raw_SOURCES in case we build a tarball without stream
